--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
-/* Main styles */
+@import url("./reset.css");
 @import url("./fonts.css");
+
+/* Page styles */
 @import url("./pagecrm_page.css");
