--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,20 @@
 
 /* Page styles */
 @import url("./pagecrm_page.css");
+
+/* Header */
+@import url("./pagecrm_header.css");
+@import url("./pagecrm_logo-box.css");
+@import url("./pagecrm_logo-img.css");
+@import url("./pagecrm_phone-number.css");
+@import url("./pagecrm_search-menu-box.css");
+@import url("./pagecrm_burger-menu.css");
+@import url("./pagecrm_burger-btn.css");
+@import url("./pagecrm_burger-img.css");
+@import url("./pagecrm_popup-menu.css");
+@import url("./pagecrm_popup-menu-opened.css");
+@import url("./pagecrm_popup-menu_navigation.css");
+@import url("./pagecrm_nav-link.css");
+
+
+
