--- a/css/pagecrm_header.css
+++ b/css/pagecrm_header.css
@@ -1,4 +1,8 @@
 .pagecrm_header {
-  min-width: 328px;
+  color: #fff;
   display: flex;
+  flex-direction: column;
+  padding: 10px;
+  row-gap: 4px;
+  width: 100%;
 }
