--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,6 @@
 @import url("./pagecrm_popup-menu-opened.css");
 @import url("./pagecrm_popup-menu_navigation.css");
 @import url("./pagecrm_nav-link.css");
+@import url("./pagecrm_searchbar.css");
+@import url("./pagecrm_searchbar-btn.css");
+@import url("./pagecrm_searchbar-img.css");
