--- a/css/pagecrm_header.css
+++ b/css/pagecrm_header.css
@@ -2,7 +2,7 @@
   color: #fff;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 11px 11px 0;
   row-gap: 4px;
   width: 100%;
 }
