--- a/css/pagecrm_phone-number.css
+++ b/css/pagecrm_phone-number.css
@@ -1,5 +1,6 @@
 .pagecrm_phone-number {
   color: #fff;
+  font-family: "Inter", Arial, sans-serif;
   font-size: 11px;
   text-decoration: none;
 }
