--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,6 @@
 @import url("./pagecrm_searchbar.css");
 @import url("./pagecrm_searchbar-btn.css");
 @import url("./pagecrm_searchbar-img.css");
+@import url("./pagecrm_breadcrumbs.css");
+@import url("./pagecrm_breadcrumbs-link.css");
+@import url("./pagecrm_arrow-img.css");
