--- a/css/pagecrm_searchbar.css
+++ b/css/pagecrm_searchbar.css
@@ -5,7 +5,7 @@
     rgba(28, 27, 51, 0.3) 100%
   );
   border-radius: 30px;
-  border: 1px solid #fff;
+  border: 1px solid hsla(245, 50%, 79%, 1);
   cursor: pointer;
   display: flex;
   justify-content: space-between;
