--- a/css/pagecrm_phone-number.css
+++ b/css/pagecrm_phone-number.css
@@ -4,3 +4,9 @@
   font-size: 11px;
   text-decoration: none;
 }
+
+.pagecrm_phone-number:hover {
+  color: #fff;
+  cursor: pointer;
+  text-shadow: 0px 0px 20px #d795ff, 0px 0px 4px #d795ff;
+}
