--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,4 @@
 @import url("./pagecrm_breadcrumbs.css");
 @import url("./pagecrm_breadcrumbs-link.css");
 @import url("./pagecrm_arrow-img.css");
+@import url("./pagecrm_searchbar-input.css");
