--- a/css/pagecrm_searchbar.css
+++ b/css/pagecrm_searchbar.css
@@ -8,7 +8,7 @@
   border: 1px solid hsla(245, 50%, 79%, 1);
   cursor: pointer;
   display: flex;
-  justify-content: space-between;
+  gap: 5px;
   min-width: 281px;
   padding: 4.5px 10px;
   width: 80%;
